# grpc-fingerprint-engine

./: .gitignore
src/cpp/: CMakeLists.txt  fingerprint_server.cc  libfprint_adapter.cpp  libfprint_adapter.h
